Fix Result Button Spacing

--- a/gbs-timed-elementary-math/src/app/mathgame/mathgame.component.css
+++ b/gbs-timed-elementary-math/src/app/mathgame/mathgame.component.css
@@ -111,4 +111,15 @@ p {
     color: #3F51B5;
 }
 
+.page3 button {
+    padding-left: 3%;
+    padding-right: 3%;
+    margin: 0 1% 0 1%;
+}
+
+.exitButton {
+    background: #dc3545;
+    color:white;
+}
+
 
